FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)
FIND_PACKAGE(FATFS REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${FATFS_INCLUDE_DIRS}
)

aux_source_directory(. MAIN_SRCS)
aux_source_directory(./DS1302 DS1302_SRCS)
aux_source_directory(./RFID RFID_SRCS)
aux_source_directory(./Usart USART_SRCS)

SET(PROJECT_SOURCES
    ${MAIN_SRCS}
    ${DS1302_SRCS}
    ${RFID_SRCS}
    ${USART_SRCS}
)


SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
    ${PROJECT_SOURCES}
    ${CMSIS_SOURCES}
    ${STM32HAL_SOURCES}
    ${FATFS_SOURCES}
)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
